Resolvendo o problema de renderização dos NPCs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,6 @@
 {
     "files.associations": {
         "iostream": "cpp",
-        "cmath": "cpp",
-        "array": "cpp",
-        "string_view": "cpp",
-        "initializer_list": "cpp",
-        "deque": "cpp",
-        "string": "cpp",
-        "vector": "cpp"
+        "cmath": "cpp"
     }
 }
